objects/TW1_Parametros_Promocao__c.object
<CustomObject>
    <fields>
        <fullName>Imprime_Reg_Autom_tico__c</fullName>
        <label>Imprime Reg. Automático</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Bonus_Cliente__c</fullName>
        <label>Max. Cupom Bônus por Cliente</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Brindes_por_Dia__c</fullName>
        <label>Max. Brindes por Dia</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Brindes_por_Troca__c</fullName>
        <label>Max. Brindes Bônus por Cliente</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Cupom__c</fullName>
        <label>Max. Cupom por Cliente</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_NTFS_mesma_loja_Cliente_e_dia__c</fullName>
        <label>Max. NTFS mesma loja, Cliente e dia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_NTFS_usadas_de_Troca__c</fullName>
        <label>Max. NTFS usadas de Troca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SGL_Shopping__c</fullName>
        <formula>TW1_Shopping__r.TW1_SGL_Empreendimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGL Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Acumula_Saldo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acumula Saldo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Autorizacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autorização</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Bonus_multiplica_por__c</fullName>
        <label>Bônus multiplica por</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_CampoVendedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campo Vendedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Campo_Numero_do_cartao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campo Número do cartão</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Campo_autorizacao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campo autorização</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Campo_forma_de_pagamento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campo forma de pagamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Campo_nome_vendedor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campo nome vendedor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cert_de_Aut__c</fullName>
        <label>Cert. de Aut.</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Cidade__c</fullName>
        <label>Cidade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_CodPromocao__c</fullName>
        <label>Código Promoção</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Concurso_Cultural__c</fullName>
        <label>Concurso Cultural</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Condicoes_especiais_cart_credito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Condições especiais cart. crédito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Contabiliza_Bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Considerar condição especial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Fim__c</fullName>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Inicio__c</fullName>
        <label>Data Início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Nota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data da Nota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Direito_para_Aba_de_Baixo__c</fullName>
        <label>Direito para Aba de Baixo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Direto_para_Aba_de_Baixo__c</fullName>
        <label>Direto para Aba de Baixo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Foma_de_PagamentoCB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foma de Pagamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Formas_de_Pagamento__c</fullName>
        <label>Formas de Pagamento</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão Debito</fullName>
                    <label>Cartão Débito</label>
                </value>
                <value>
                    <fullName>Cartão Caixa</fullName>
                </value>
                <value>
                    <fullName>Cartão Caixa ELO</fullName>
                </value>
                <value>
                    <fullName>Visa Vale</fullName>
                </value>
                <value>
                    <fullName>Visa Platinum</fullName>
                </value>
                <value>
                    <fullName>Visa Infinite</fullName>
                </value>
                <value>
                    <fullName>Clube Rio Design</fullName>
                </value>
                <value>
                    <fullName>Dinheiro(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Débito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito(FDS)</fullName>
                </value>
                <value>
                    <fullName>Aplicativo</fullName>
                </value>
                <value>
                    <fullName>Aplicativo(FDS)</fullName>
                </value>
                <value>
                    <fullName>Cartão Crédito</fullName>
                </value>
                <value>
                    <fullName>CLUBE RDB</fullName>
                    <isActive>false</isActive>
                    <label>CLUBE RDB</label>
                </value>
                <value>
                    <fullName>Cartão Credito</fullName>
                    <isActive>false</isActive>
                    <label>Cartão Credito</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Identificador_da_Promocao__c</fullName>
        <description>Campo usado para criar um indentificador unico de cada promoção nos shoppings</description>
        <inlineHelpText>Digite um nome único para identificar a premoção</inlineHelpText>
        <label>Identificador da Promoção</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TW1_Imprime_Cupom_Conc_Cult__c</fullName>
        <label>Imprime Cupom Conc. Cult</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Imprime_Cupom__c</fullName>
        <label>Imprime Cupom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Imprime_Regulamento_Botao__c</fullName>
        <label>Imprime Regulamento - Botão</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Imprime_Voucher__c</fullName>
        <label>Imprime Voucher</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Imprimir_nome_do_lojista__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imprimir nome do lojista?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Libera_Aba_Estorno__c</fullName>
        <label>Libera Aba Estorno</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Libera_Aba_Relacionamento__c</fullName>
        <label>Libera Aba Relacionamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Loja__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loja</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Max_Brinde_Clientes__c</fullName>
        <label>Max. Brindes por Clientes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Max_Brindes_por_NTFS__c</fullName>
        <label>Max. Brindes por NTFS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Max_Participacoes__c</fullName>
        <label>Max. Participações</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_NTFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Número NTFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_do_Cartao__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Número do Cartão</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Pergunta__c</fullName>
        <label>Pergunta</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Permitir_Numeracao_Sequenciada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permitir Numeração Sequenciada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Possui_Limite_de_Brindes_por_NTFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possui Limite de Brindes por NTFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Possui_Limites_de_Brindes_por_NTFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possui Limites de Brindes por NTFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Possui_Questionario__c</fullName>
        <label>Possui Questionário</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Qtde_de_condicoes__c</fullName>
        <label>Qtde de condições</label>
        <summaryForeignKey>TW1_Condicoes_Especiais__c.TW1_Promocao__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Questionario_Obrigatorio__c</fullName>
        <label>Questionário Obrigatório</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Regional_Shopping__c</fullName>
        <formula>TEXT(TW1_Shopping__r.TW1_Regional__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Responde_mais_de_uma_vez__c</fullName>
        <label>Responde mais de uma vez</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Responde_por_Atendimento__c</fullName>
        <label>Responde por Atendimento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <label>SGL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Senha_Supervisor_notas__c</fullName>
        <label>Senha Supervisor notas acima de (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipName>Promo_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Transforma_Dinheiro__c</fullName>
        <label>Transforma Dinheiro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Troca_por__c</fullName>
        <label>Troca por</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brinde</fullName>
                </value>
                <value>
                    <fullName>Cupom</fullName>
                </value>
                <value>
                    <fullName>Ambos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_UF__c</fullName>
        <label>UF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MG</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>PA</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>RJ</fullName>
                </value>
                <value>
                    <fullName>RN</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RR</fullName>
                </value>
                <value>
                    <fullName>RS</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Valor_Min_NTFS__c</fullName>
        <label>Valor Min. Troca (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Min_Troca__c</fullName>
        <label>Valor Min. Troca (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Voucher_Estacionamento__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher Estacionamento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tw1_CobrarBrinde__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cobrar Brinde</label>
        <type>Checkbox</type>
    </fields>
    <label>Parâmetros da Promoção</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Max_Brinde_Clientes__c</columns>
        <columns>TW1_Cert_de_Aut__c</columns>
        <columns>TW1_Identificador_da_Promocao__c</columns>
        <columns>TW1_Data_Inicio__c</columns>
        <columns>TW1_Data_Fim__c</columns>
        <columns>Max_Brindes_por_Troca__c</columns>
        <columns>TW1_Contabiliza_Bonus__c</columns>
        <columns>TW1_Imprimir_nome_do_lojista__c</columns>
        <columns>TW1_Troca_por__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Promoções</label>
    </listViews>
    <nameField>
        <label>Nome da Promoção</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parâmetros da Promoções</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>